# rng-simulator

./: LICENSE  README.md  rng-simulator.cabal  stack.yaml
app/: Main.hs
src/: MRandom.hs
test/: Spec.hs
