name:                rng-simulator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rng-simulator#readme
license:             BSD3
license-file:        LICENSE
author:              William Zimrin
maintainer:          retief1@gmail.com
copyright:           2017 William Zimrin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MRandom
  build-depends:       base >= 4.7 && < 5
                     , random
                     , containers
                     , text
                     , fmt
  default-language:    Haskell2010

executable rng-simulator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rng-simulator
                     , random
  default-language:    Haskell2010

test-suite rng-simulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rng-simulator
                     , HUnit
                     , containers
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/retief/rng-simulator
